--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+h2 {
+    font-family: "Montserrat-Bold", sans-serif;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
 #title {
     background-color: #ff4c68;
     color: #fff;
@@ -50,4 +56,72 @@ body {
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+}
+
+/* Features section */
+
+.features-title-h3 {
+    font-size: 1.5rem;
+    font-family: "Montserrat-Bold", sans-serif;
+}
+
+.features-title-p {
+    color: #8f8f8f;
+}
+
+.features-icons {
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+
+.features-icons:hover {
+    color: #ff4c68;
+}
+
+#features {
+    text-align: center;
+    padding: 7% 15%;
+}
+
+/* Testimonial section */
+
+#testimonials {
+    text-align: center;
+    background-color: #ef8172;
+    color: #ffffff;
+
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
+}
+
+/* Press section */
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-image {
+    width: 15%;
+    margin: 20px 20px 50px;
+}
+
+/* Pricing section */
+
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column {
+    padding: 3% 2%;
 }
