--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,47 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    text-align: center;
 }
 
-h2 {
+h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat-Bold", sans-serif;
+}
+
+#title .container-fluid {
+    padding: 3% 15% 7%;
+    text-align: left;
+}
+
+p {
+    color: #8f8f8f;
+}
+
+/*Headings*/
+
+.big-heading {
+    font-family: 'Montserrat-Black', sans-serif;
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+.section-heading {
     font-size: 3rem;
     line-height: 1.5;
 }
 
-#title {
+.container-fluid {
+    padding: 7% 15%;
+}
+
+/*Section*/
+
+.colored-section {
     background-color: #ff4c68;
     color: #fff;
 }
 
-#main-title {
-    font-family: 'Montserrat-Black', sans-serif;
-    font-size: 5rem;
-    line-height: 1.5;
-    font-weight: bolder;
-}
-
-.container-fluid {
-    padding: 3% 15%;
+.white-section {
+    background-color: #ffffff;
 }
 
 /* Navigation Bar */
@@ -54,15 +74,20 @@ h2 {
 /* Title image */
 
 .title-image {
-    width: 60%;
+    width: 15%;
     transform: rotate(25deg);
+    position: absolute;
 }
 
 /* Features section */
 
-.features-title-h3 {
+#features {
+    position: relative;
+    z-index: 1;
+}
+
+.features-title {
     font-size: 1.5rem;
-    font-family: "Montserrat-Bold", sans-serif;
 }
 
 .features-title-p {
@@ -78,18 +103,10 @@ h2 {
     color: #ff4c68;
 }
 
-#features {
-    text-align: center;
-    padding: 7% 15%;
-}
-
 /* Testimonial section */
 
 #testimonials {
-    text-align: center;
     background-color: #ef8172;
-    color: #ffffff;
-
 }
 
 .testimonial-image {
@@ -98,15 +115,15 @@ h2 {
     margin: 20px;
 }
 
-.carousel-item {
-    padding: 7% 15%;
+.testimonial-text {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 /* Press section */
 
 #press {
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -119,9 +136,34 @@ h2 {
 
 #pricing {
     padding: 100px;
-    text-align: center;
 }
 
 .pricing-column {
     padding: 3% 2%;
+}
+
+.price-text {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+/* CTA Section */
+
+
+/*Footer section*/
+
+.social-icon {
+    margin: 20px 10px;
+}
+
+@media (max-width: 1028px) {
+
+    #title {
+        text-align: center;
+    }
+
+    .title-image {
+        position: static;
+        transform: rotate(0);
+    }
 }
